# softcosim

./: .gitignore  README.md  pyproject.toml
softcosim/: __main__.py  agents.py  checker.py  docker_runner.py  engine.py  fs.py  llm.py
tests/: conftest.py  test_agents.py  test_cli.py  test_engine.py  test_fs.py  test_gossip.py  test_llm.py  test_qa.py
